style.css
a {
    text-decoration: none; /* Remove underline from links */
}
body {
    font-family: 'Courier New', Courier, monospace;
    display: flex;
    flex-direction: column;
    align-items: center;
}
b.personaltitle{
    font-weight: bold;
    font-size: 25px;
    margin-left: 10px;
}
img.profileimg {
    width: 90px; 
    height: 90px; 
    border-radius: 50%;

}
header, footer {
    width: 100%;
    text-align: center;
}
main {
    width: 600px;
    margin-top: 20px;
}
h1, h2 {
    text-align: center;
}
button {
    background-color: #E9ECF0;
    color: black;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    cursor: pointer;
    border-radius: 20px; /* Rounded corners */
    transition: background-color 0.3s;
    display: block;
    width: 350px; /* Set a fixed width for the button */
    word-wrap: break-word; /* Allow text to wrap */
    text-align: center;
    margin: 0 auto;
    font-size: 18px; /* Increased font size */
    margin-bottom: 20px; /* Gap underneath each button */
    font-family: 'Courier New', Courier, monospace;
    display: flex;
    flex-direction: column;
    align-items: center;
}
button:hover {
    background-color: #797979;
}

